@@ -1797,6 +1797,18 @@ Also, 0..9 = $below_ten, one,two,three = $ascii and the bonus answer is $mixed."
         [/filter]
         {LOG "$unit.name (id $unit.id|) requested health insurance!"}
         {FULL_HEAL (x,y=$x1|,$y1)}
+        [object]
+            id=brief_health
+            silent=yes
+            duration=turn
+            [filter]
+                x,y=14,12
+            [/filter]
+            [effect]
+                apply_to=hitpoints
+                increase_total=50%
+            [/effect]
+        [/object]
     [/event]
 
     [label]
