@@ -194,6 +194,7 @@ Version 1.11.0-svn:
    * Replaced variable i by TRANSFORM_UNIT_i in macro TRANSFORM_UNIT
    * Fix $owner_side in capture events fired due to unit movement
    * Introduce [item]redraw=yes|no (def yes) parameter
+   * Added [object]duration=turn
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
